# pdo_snowflake

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  README.rst  README_IPv6.md  composer.json  config.m4  config.w32  parameters.json.enc  parameters_AWS.json.gpg  parameters_az.json.enc  pdo_snowflake.c  php_pdo_snowflake.h  php_pdo_snowflake_int.h  run_test_simple.sh  snowflake_arraylist.c  snowflake_arraylist.h  snowflake_driver.c  snowflake_paramstore.c  snowflake_paramstore.h  snowflake_rbtree.c  snowflake_rbtree.h  snowflake_stmt.c  snowflake_treemap.c  snowflake_treemap.h  testenv.ini.txt
.github/: secret_scanning.yml
docker/: build.sh  (+4 more)
libsnowflakeclient/: .gitignore  CMakeLists.txt  README.rst  README.txt  snowflake_20231027140825.txt  snowflake_20231103173723.txt  snowflake_client.c  snowflake_client.h  snowflake_client_int.h  snowflake_client_version.h
libsnowflakeclient/deps-build/darwin/azure/include/: base64.h  executor.h  http_base.h  tinyxml2_parser.h
libsnowflakeclient/deps-build/darwin/azure/include/blob/: copy_blob_request.h  create_block_blob_request.h  delete_blob_request.h  download_blob_request.h  get_blob_property_request.h  get_page_ranges_request.h
libsnowflakeclient/deps-build/darwin/cmocka/lib/: libcmocka.0.4.1.dylib
libsnowflakeclient/deps-build/darwin/curl/include/curl/: curl.h
libsnowflakeclient/deps-build/darwin/curl/lib/pkgconfig/: libcurl.pc
libsnowflakeclient/deps-build/darwin/oob/include/: sf_ocsp_telemetry_data.h
libsnowflakeclient/deps-build/darwin/openssl/: fipsmodule.cnf
libsnowflakeclient/deps-build/darwin/openssl/include/openssl/: opensslconf.h  opensslv.h
libsnowflakeclient/deps-build/darwin/openssl/lib/ossl-modules/: fips.dylib
libsnowflakeclient/deps-build/darwin/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libsnowflakeclient/deps-build/darwin/uuid/lib/: libuuid.dylib
libsnowflakeclient/deps-build/darwin/uuid/lib/pkgconfig/: uuid.pc
libsnowflakeclient/deps-build/linux/aarch64/cmocka/lib/: libcmocka.so.0
libsnowflakeclient/deps-build/linux/azure/include/: retry.h  storage_account.h  storage_credential.h  storage_request_base.h  xml_parser_base.h
libsnowflakeclient/deps-build/linux/azure/include/blob/: append_block_request.h  blob_client.h  create_container_request.h  delete_container_request.h  get_block_list_request.h  get_container_property_request.h  list_blobs_request.h  list_containers_request.h  put_block_list_request.h  put_block_request.h  put_page_request.h
libsnowflakeclient/deps-build/linux/azure/include/http/: libcurl_http_client.h
libsnowflakeclient/deps-build/linux/cmocka/lib/: libcmocka.so.0  libcmocka.so.0.4.1
libsnowflakeclient/deps-build/linux/cmocka/lib/pkgconfig/: cmocka.pc
libsnowflakeclient/deps-build/linux/curl/include/curl/: curl.h
libsnowflakeclient/deps-build/linux/curl/lib/pkgconfig/: libcurl.pc
libsnowflakeclient/deps-build/linux/openssl/: fipsmodule.cnf
libsnowflakeclient/deps-build/linux/openssl/include/openssl/: configuration.h
libsnowflakeclient/deps-build/linux/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libsnowflakeclient/deps-build/linux/zlib/lib/pkgconfig/: zlib.pc
libsnowflakeclient/deps-build/win64/vs14/arrow_deps/lib/: bz2.lib  event.lib  lz4.lib  uriparser.lib  xxhash.lib  zlib.lib
libsnowflakeclient/deps-build/win64/vs14/boost/lib/: boost_system-vc140-mt.lib  libboost_filesystem.lib  libboost_system.lib
libsnowflakeclient/deps-build/win64/vs14/cmocka/lib/: cmocka_a.lib
libsnowflakeclient/deps-build/win64/vs14/curl/lib/: libcurl_a.lib
libsnowflakeclient/deps-build/win64/vs14/oob/lib/: libtelemetry_a.lib
libsnowflakeclient/deps-build/win64/vs14/openssl/lib/: libssl_a.lib
libsnowflakeclient/deps-build/win64/vs14/zlib/lib/: zlib_a.lib
libsnowflakeclient/deps-build/win64/vs15/arrow_deps/lib/: event_core.lib
libsnowflakeclient/examples/: CMakeLists.txt  bind_params.c  bind_results.c  change_current.c  check_ctypes.c  connect.c  connect_negative.c  crud.c  error_handling.c  example_setup.c  json_test.c  large_result_set.c  ping_pong.c  select1.c  selectbin.c  selectbool.c  selectnull.c  selectnum.c  selecttime.c  selecttsltz.c  selecttsntz.c  selecttstz.c  selectvar.c  stmt_with_bad_connect.c  timezone.c  transaction.c
libsnowflakeclient/examples/connect/: CMakeLists.txt  connect.c
libsnowflakeclient/examples/select1/: CMakeLists.txt  select1.c
libsnowflakeclient/examples/transaction/: CMakeLists.txt  transaction.c
libsnowflakeclient/examples/utils/: example_setup.h
libsnowflakeclient/include/: arraylist.h  basic_types.h  snowflake_basic_types.h  snowflake_client.h  snowflake_client_version.h  snowflake_logger.h  uuid4.h
libsnowflakeclient/include/snowflake/: AWSUtils.hpp  BaseClasses.hpp  BindUploader.hpp  Column.hpp  Connection.hpp  CurlDesc.hpp  CurlDescPool.hpp  Exceptions.hpp  HttpClient.hpp  IAuth.hpp  IBase64.hpp  IFileTransferAgent.hpp  IJwt.hpp  ISFLogger.hpp  IStatementPutGet.hpp  ITransferResult.hpp  Param.hpp  PlatformDetection.hpp  Proxy.hpp  PutGetParseResponse.hpp  QueryContextCache.hpp  SFURL.hpp  SF_CRTFunctionSafe.h  SecureStorage.hpp  Simba_CRTFunctionSafe.h  SnowflakeTransferException.hpp  Statement.hpp  Stopwatch.h  TomlConfigParser.hpp  WifAttestation.hpp  basic_types.h  client.h  client_config_parser.h  entities.hpp  logger.h  platform.h  secure_storage.h  version.h
libsnowflakeclient/lib/: arraylist.c  arraylist.h  basic_types.c  basic_types.h  chunk_downloader.c  chunk_downloader.h  client.c  client_int.h  connection.c  connection.h  constants.h  error.c  error.h  log.c  logger.c  memory.c  memory.h  results.c  results.h  sf_cJSON.c  sf_cJSON.h  snowflake_basic_types.c  snowflake_client.c  snowflake_client_int.h  snowflake_logger.c  snowflake_memory.c  snowflake_memory.h  uuid4.c
libsnowflakeclient/lib/win64/: snowflakeclient.lib
libsnowflakeclient/lib/win64/vs14/: snowflakeclient.lib
libsnowflakeclient/lib/win64/vs15/: snowflakeclient.lib
libsnowflakeclient/scripts/: build_curl_openssl.sh  build_libsnowflakeclient.sh  run_tests.sh
(+288 files in other folders)
